--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
 	"compilerOptions": {
+		"moduleResolution": "NodeNext",
+		"module": "NodeNext",
+
 		"target": "ES2022",
-		"module": "ES2022",
-		"allowJs": true,
-		"checkJs": true,
+		"allowJs": false,
 		"strict": true,
 		"noImplicitAny": false,
 		"baseUrl": ".",
-		"typeRoots": ["./types/@girs"],
+
+		"paths": {
+			"ags": ["./types/*"]
+		},
 		"skipLibCheck": true
 	}
 }
