--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"exports": {
-		".": "./src/index.ts",
-		"./components": "./src/"
+		".": "./src/index.ts"
 	},
 	"peerDependencies": {
 		"typescript": "^5.0.0"
